--- a/Review20180707/Review20180707.csproj
+++ b/Review20180707/Review20180707.csproj
@@ -257,6 +257,7 @@
     <Content Include="Views\Products\Index.cshtml" />
     <Content Include="Views\Products\NewIndex.cshtml" />
     <Content Include="Views\Products\AddNewProduct.cshtml" />
+    <Content Include="Views\Products\NewEdit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
