10 練習透過 Entity Framework 刪除一筆 Product 資料 並修復 Index 的 刪除功能

--- a/Review20180707/Review20180707.csproj
+++ b/Review20180707/Review20180707.csproj
@@ -258,6 +258,7 @@
     <Content Include="Views\Products\NewIndex.cshtml" />
     <Content Include="Views\Products\AddNewProduct.cshtml" />
     <Content Include="Views\Products\NewEdit.cshtml" />
+    <Content Include="Views\Products\NewDelete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
